# Azure-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_conversations_messages.py  0003_traces.py  0004_user_id.py  0005_trace_user_id.py
backend/app/: auth.py  azure_credential.py  config.py  dependencies.py  logging_config.py  main.py  middleware.py  pagination.py  rate_limit.py  worker.py
backend/app/db/: models.py  session.py
backend/app/eval/: golden_set.py  metrics.py  runner.py
backend/app/observability/: telemetry.py  tracer.py
backend/app/routers/: auth_routes.py  chat.py  documents.py  health.py  prompts.py  query.py  traces.py
backend/app/schemas/: analysis.py  chat.py  documents.py  health.py  pagination.py  query.py  trace.py
backend/app/services/: cache.py
backend/app/services/agent/: graph.py  prompts.py  tools.py
backend/app/services/generation/: analyzer.py  generator.py  prompts.py
backend/app/services/ingestion/: chunker.py  embedder.py  indexer.py  parsers.py
backend/app/services/retrieval/: retriever.py
backend/app/services/storage/: blob.py  search.py
backend/tests/: conftest.py  test_api_conversations.py  test_api_documents.py  test_api_health.py  test_api_prompts.py  test_api_query_logs.py  test_auth.py  test_auth_cookies.py  test_azure_credential.py  test_blob.py  test_cache.py  test_chat_helpers.py  test_chunker.py  test_generator.py  test_health.py  test_pagination.py  test_parsers.py  test_security_headers.py  test_traces.py  test_worker.py
docs/: azure-setup.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  next.config.ts  nginx.conf  package-lock.json  package.json
infra/: README.md  main.bicep  main.bicepparam
(+38 files in other folders)
